discussion/kv_engine/171644/171644_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50988: Limit compaction concurrency with SemaphoreBoundedTask

Separate responsibility for limiting CompactTask concurrency from
compaction delay management.

CompactTasks now acquire tokens from a cb::AwaitableSemaphore, or will
snooze() if none are available. Once tokens are available, the task
will be notified to run immediately.

If compaction is requested with a delay, the task will initially sleep
until that time has passed, before attempting to acquire a token and
run.

Even if the task must snooze() until tokens are available, it will not
begin compacting until the desired start time has been reached.

This separation makes it simpler to reason about how many tasks can run
at once.

Change-Id: I9d56edd52fc3ffca45357f10eef29ca6e3cfcfde

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-02 11:11:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-02 11:27:35.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15877/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10: error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
#include <platform/awaitable_semaphore.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15877/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15877/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44287/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\semaphore_bounded_task.h(15): fatal error C1083: Cannot open include file: "platform/awaitable_semaphore.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44287/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37294/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37294/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26042/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5589/ : FAILURE

Compile error at [2022-03-02T11:18:14.906Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5589/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5530/ : FAILURE

Compile error at [2022-03-02T11:20:17.791Z] ../kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5530/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17966/ : FAILURE

Compile error at [2022-03-02T11:21:47.086Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17966/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17640/ : FAILURE

Compile error at [2022-03-02T11:23:50.522Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17640/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16705/ : FAILURE

Compile error at [2022-03-02T11:14:53.655Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16705/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18673/ : FAILURE

Compile error at [2022-03-02T11:21:29.351Z] ../kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18673/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14723/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-03-02 11:30:55.000000000
Message: 
Abandoned

flipping to neo branch
----------------------------------------------------------------------------------------------------------------------
